[gd_scene load_steps=3 format=3 uid="uid://cufh62n7wdg1k"]

[ext_resource type="PackedScene" uid="uid://dgdivt86emuj0" path="res://scenes/UI/CustomButton.tscn" id="1_a0vwd"]
[ext_resource type="Script" uid="uid://dh3jmvn7k8qax" path="res://scripts/ui/VictoryScreen.gd" id="1_sjpqj"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjpqj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.388235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -91.0
offset_right = 31.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "win!"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Best: 0"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="NewHighScoreLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "new high score!"

[node name="LevelSelectButton" parent="VBoxContainer" instance=ExtResource("1_a0vwd")]
layout_mode = 2
text = "level select"
button_text = "level select"

[node name="StatsButton" parent="VBoxContainer" instance=ExtResource("1_a0vwd")]
layout_mode = 2
text = "stats"
button_text = "stats"

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource("1_a0vwd")]
layout_mode = 2
text = "main"
button_text = "main"
